# Aga

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/access-segregator/: Cargo.toml
pallets/access-segregator/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: mock.rs
primitives/aga/: Cargo.toml
primitives/aga/src/: lib.rs
resources/: aga-chain-spec-raw.json  aga-chain-spec.json
runtime/: Cargo.toml  rustc-ice-2024-11-29T08_54_19-27816.txt
runtime/src/: apis.rs  assets_config.rs  benchmarks.rs  contract_config.rs  dex_config.rs  lib.rs  pallet_asset_conversion.rs
runtime/src/configs/: mod.rs
runtime/src/weights/: mod.rs
src copy/: assets_config.rs  contract_config.rs  lib.rs
src copy/configs/: mod.rs
traits/: Cargo.toml
traits/src/: lib.rs
